# about-window-poc

./: README.md  meson.build
build-aux/flatpak/: com.nahuelwexd.AboutWindowPoC.json
data/: meson.build
data/icons/: about-window-poc-icon-resources.xml  meson.build
data/styles/: about-window-poc-style-resources.xml  meson.build  style.css
src/: AboutWindow.ui.vala  AboutWindowDemo.ui  AboutWindowDemo.ui.vala  Application.vala  about-window-poc-ui-resources.xml  meson.build
src/Widgets/: AboutAppInfo.ui  AboutAppInfo.ui.vala
src/Windows/: AboutWindow.ui  AboutWindow.ui.vala  AboutWindowDemo.ui  AboutWindowDemo.ui.vala
